# tree-sitter-aiscript

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  go.mod  grammar.js  lefthook.toml  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-aiscript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_aiscript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAiscript/: aiscript.h
bindings/swift/TreeSitterAiscriptTests/: TreeSitterAiscriptTests.swift
queries/: highlights.scm
src/: grammar.json  parser.c  scanner.c
test/corpus/: expressions.txt  literals.txt  statements.txt  toplevel.txt  types.txt
